// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Game class return computer 1`] = `
{
  "gameboard": Gameboard {
    "attackMessage": "",
    "availableShips": [],
    "board": [
      [
        0,
        0,
        0,
      ],
      [
        0,
        0,
        0,
      ],
      [
        0,
        0,
        0,
      ],
    ],
    "isAllShipSunk": false,
    "ships": [],
    "size": 3,
    "sunkMessage": "",
  },
  "name": "computer",
}
`;

exports[`Game class return player 1`] = `
{
  "gameboard": Gameboard {
    "attackMessage": "",
    "availableShips": [],
    "board": [
      [
        0,
        0,
        0,
      ],
      [
        0,
        0,
        0,
      ],
      [
        0,
        0,
        0,
      ],
    ],
    "isAllShipSunk": false,
    "ships": [],
    "size": 3,
    "sunkMessage": "",
  },
  "name": "player",
}
`;
